# Trabalho-Individual-2022-2-

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  dox_file  pyproject.toml  requirements.txt
data/: data_example2.csv
docs/html/: index.html
docs/latex/: refman.tex
doxygen/html/: index.html  md_CODE_OF_CONDUCT.html  md_CONTRIBUTING.html  md_README.html  pages.html
doxygen/html/search/: all_0.js  pages_1.js
doxygen/latex/: md_CODE_OF_CONDUCT.tex  md_CONTRIBUTING.tex  md_README.tex  refman.tex
metabase/config/: metabase_database_exemple.env  mongo_exemple.env  postgres_exemple.env
sphinx/: conf.py
sphinx/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
sphinx/_build/.doctrees/: environment.pickle  index.doctree
sphinx/_build/_sources/: index.rst.txt
src/: main.py
src/data_pipeline/feature_engineering/: key_smash.py  word_embedding.py
src/data_pipeline/pre_processing/: concatenate_columns.py
src/parser/: YAML_parser.py  const.py  feature_engineering_parser.py  model_parser.py  parser_base.py
src/yamls/: basic_example.yaml
tests/mock/: data_mock.csv
